public/stylesheets/style.css
html {
  --first-color: #fff;
  --first-color-transparent: #ffffff00;
  --first-color-light: #ccc;
  --second-color: #ff8000;
  --third-color: #ff0000;

  --first-background: #333;
  --first-background-light: #444;
  --first-background-light-transparent: #44444400;

  --nav-height: 64px;

  --title-bg-padding: 32px;

  --nav-opener-padding: 16px;

  --global-perspective: 100dvw;
  --global-perspective-origin: 75%;

  --mobile-nav-margin: calc(var(--title-bg-padding) / 4);
  --mobile-nav-width: calc(80px - var(--mobile-nav-margin) * 2);
}

/* * {
  transition: 500ms;
} */

body {
  position: relative;

  padding: 0;
  margin: 0;

  background-color: #000000;

  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;

  height: 100dvh;
  /* sus? */

  overflow: visible;
}

.stop-scrolling {
  height: 100%;
  overflow: hidden;
}

a {
  text-decoration: underline dotted 1px;
}

nav {
  z-index: 10000;

  position: sticky;
  top: 0;

  display: flex;
  /* padding: 0 16px; */

  height: var(--nav-height);

  background-color: transparent;
  justify-content: flex-end;
  align-items: center;

  color: var(--first-color);

  font-size: 1.5em;
  font-weight: bold;
  text-transform: uppercase;

  text-shadow: 0 0 4px #00000066;
}

.nav-container {
  width: 50%;
}

nav ul {
  list-style: none;
  display: inline;
}

nav li {
  display: inline;
}

nav li.current-page-nav a::before {
  content: '◆';
  margin-left: -1em;
  padding: 0 8px;
}

nav li:not(.current-page-nav) a {
  margin-left: 0.5em;
}

nav a {
  padding: 0 16px 0 16px;
  text-decoration: none;
}

nav a,
nav a:hover {
  color: var(--first-color);
}



h1 {
  color: var(--first-color);
}

h2 {
  color: var(--second-color);
  ;
}

a {
  color: var(--third-color);
}

/*  */
/*HEADER SPLASH*/
/*  */
header {
  position: relative;
  overflow: hidden;

  display: flex;

  height: 100dvh;

  top: calc(0dvh - var(--nav-height));

  perspective: var(--global-perspective);
  perspective-origin: var(--global-perspective-origin);
}

.splash-parallax {
  position: fixed;
  inset: 0;
  transition: 0s;
  /* overflow: hidden;
  height: 100dvh; */
}

.splash-background {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-image: url("../img/splash_anime_food_2048x1152.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position-x: center;
  /* transform: translateZ(-1px) scale(1.1); */
  z-index: -100;
}

.splash-content-container {
  margin: auto;
  width: calc(40% - var(--title-bg-padding));
  margin-left: 10%;
  margin-right: var(--title-bg-padding);
}

.splash-content {
  position: relative;
  z-index: 1;

  /* margin: auto; */

  width: 100%;

  color: var(--first-color);

  display: flex;
  flex-direction: column;
}

.splash-content::before {
  z-index: -50;
  position: absolute;
  content: '';

  padding: var(--title-bg-padding);

  --title-bg-height: 200dvh;
  height: calc(var(--title-bg-height) * 2);
  width: 100%;

  top: calc(var(--title-bg-height) * -1);
  left: calc(-1 * var(--title-bg-padding));

  background-color: var(--third-color);
}

.splash-content,
.splash-content * {
  transition: 350ms;
}

.splash-content h1 {
  /* position: relative; */
  position: absolute;

  margin: 0 0 0 -0.05em;
  /* margin-top: -0.88em; */
  /* margin-top: -7dvw; */

  /* width: 5em; */
  font-size: 8dvw;

  -webkit-text-stroke-width: 1px;
  -webkit-text-stroke-color: var(--first-color);

  color: transparent;
  text-shadow: none;

  -webkit-mask-image: linear-gradient(to bottom, black 15%, transparent 45%);
  mask-image: linear-gradient(to bottom, black 15%, transparent 45%);
}

.splash-content h1:last-of-type {
  position: relative;
  margin-top: 0;
  margin-bottom: -0.2em;

  color: var(--first-color);
  text-shadow: 0 0 16px rgba(0 0 0 / 30%);

  -webkit-mask-image: none;
  mask-image: none;

  /* float: initial; */
}

.splash-content h2 {
  font-size: 2.3dvw;

  color: var(--first-color);

  text-shadow: 0 0 8px rgba(0 0 0 / 50%);

  /* float: left;
  clear: left; */
}

/*  */
/* SEARCH BAR SEARCH-BAR SEARCHBAR */
/*  */
.search-form.search-error.nothing-found::before {
  /* for error messages */
  z-index: 10000;
  content: attr(data-content);
  position: absolute;

  top: -100%;
  padding: 8px;

  left: 50%;
  transform: translate(-50%, -8px);

  width: 60%;

  background: black;
  color: white;

  text-align: center;
  font-weight: bold;

  border-radius: 5px;
  filter: drop-shadow(0 0 8px rgba(0 0 0 / 20%));

  animation-name: fade-in-opacity;
  animation-duration: 500ms;
  animation-fill-mode: forwards;
}

.search-form.search-error.nothing-found.fading-out::before {
  animation-name: fade-out-opacity;
  animation-duration: 2000ms;
  animation-fill-mode: forwards;
}

@keyframes fade-in-opacity {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes fade-out-opacity {
  from {
    opacity: 1;
  }

  to {
    opacity: 0;
  }
}

.search-form {
  position: relative;
}

.search-form input[type="text"] {
  width: calc(100% - 2em - 4px);
  height: 2em;

  padding: 0 2em 0 4px;

  border: none;

  background-color: var(--first-background-light);

  font-size: 1.3em;

  color: #ccc;
  caret-color: #ccc;

  filter: drop-shadow(0 0 8px rgba(0 0 0 / 20%));
}

.search-form input[type="text"]:focus {
  background-color: var(--first-background);

  border: none;
  outline: none;

  filter: drop-shadow(0 0 4px rgba(0 0 0 / 50%));
}

.search-form input[type="text"]::placeholder {
  color: var(--first-color-light);
}

.search-form button[type="submit"] {
  position: absolute;
  top: 50%;
  transform: translate(0, -50%);
  right: 4px;
  width: 2em;
  height: 2em;
  padding: 0;
  border: none;

  background-color: transparent;
  background-image: url("../img/search_white.svg");
  background-repeat: no-repeat;

  opacity: 0.7;

  outline: none;
  cursor: pointer;
}

.fa-search {
  color: #555;
  font-size: 20px;
}
/* ... */

